--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,56 @@
 body {
     display: flex;
     align-items: stretch;
+    height: 100%;
 }
 
 .nav-header {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    font-size: xx-large;
+    height: 10%;
 }
 
 .linklist {
     text-decoration: underline;
     font-family: Helvetica, sans-serif;
+    overflow-y: auto;
+    height: 90%;
+
 }
 
 .navbar {
     flex-grow: 1;
     display: grid;
     grid-template-columns: 1fr;
-    justify-content: space-between;
+    grid-template-rows: 50px auto;
     position: fixed;
     top: 0;
+    height: 100vh;
     left: -200px;
     width: 200px;
-    background-color: #EEE;
+    background-color: #e6e6e6;
     text-align: center;
     transition : transform 0.3s ease-in-out;
-    align-items: stretch;
 
 }
 
 .navbar.active{
     transform: translateX(200px);
-    overflow-y: auto;
-    max-height: 100vh;
 }
 
 aside {
     flex-grow: 2;
     display: flex;
     flex-direction: column;
-    margin-left: auto;
-    padding-left: 20px;
+    padding-left: 100px;
     background-color: #82e2ff;
     font-family: Arial, sans-serif;
-
+    height: 100%;
+}
+.checkbox-container {
+    width: 400px;
+}
+  
+.checkbox-column {
+    float: left;
 }
